# PyGitrefer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pygitrefer/: cli.py  const.py  git_api.py  gitrefer.py  pdf_to_doi.py  reference_manager.py  utils.py
